--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,18 @@
 {
-    "name": "user/refactoring",
-    "description": "Pruebas Unitarias UTEA",
-    "type": "project",
-    "license": "HFD",
+    "name": "antony/refactring",
+    "description": "antony refactory",
+    "type": "proyect",
+    "license": "UTEA",
+    "autoload": {  
+        "psr-4": {  
+            "App\\": "app/"  
+        }  
+    }  ,
     "authors": [
         {
-            "name": "Hector"
+            "name": "antony"
         }
     ],
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^10.5"
-    }
+    "require": {}
+    
 }
